--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EzInstall</title>
   <link rel="stylesheet" href="css/index.css">
+  <script src="https://cdn.jsdelivr.net/npm/fuse.js@7.1.0"></script>
 </head>
 <body>
   <h1>EzInstall</h1>
@@ -16,6 +17,7 @@
   
   <div class="support">
     <h3>Support Me</h3>
+    <img src="images/qrcode.svg">
     <p>Small tip can make me happy :D</p>
   </div>
   
