--- a/apps/firefox.html
+++ b/apps/firefox.html
@@ -13,43 +13,43 @@
 <div class="box">
   <div class="distro">
     <h2>Ubuntu</h2>
-    <p id="ubuntu">sudo apt install firefox</p>
+    <p class="codeblock" id="ubuntu">sudo apt install firefox</p>
     <button onclick="copyToClipboard('ubuntu')">Copy to clipboard</button>
   </div>
 
   <div class="distro">
     <h2>Debian</h2>
-    <p id="debian">sudo apt-get install firefox-esr</p>
+    <p class="codeblock" id="debian">sudo apt-get install firefox-esr</p>
     <button onclick="copyToClipboard('debian')">Copy to clipboard</button>
   </div>
 
   <div class="distro">
     <h2>Arch</h2>
-    <p id="arch">sudo pacman -S firefox</p>
+    <p class="codeblock" id="arch">sudo pacman -S firefox</p>
     <button onclick="copyToClipboard('arch')">Copy to clipboard</button>
   </div>
 
   <div class="distro">
     <h2>Manjaro</h2>
-    <p id="manjaro">sudo pacman -S firefox</p>
+    <p class="codeblock" id="manjaro">sudo pacman -S firefox</p>
     <button onclick="copyToClipboard('manjaro')">Copy to clipboard</button>
   </div>
 
   <div class="distro">
     <h2>Fedora</h2>
-    <p id="fedora">sudo dnf install firefox</p>
+    <p class="codeblock" id="fedora">sudo dnf install firefox</p>
     <button onclick="copyToClipboard('fedora')">Copy to clipboard</button>
   </div>
 
   <div class="distro">
     <h2>Linux Mint</h2>
-    <p id="mint">sudo apt install firefox</p>
+    <p class="codeblock" id="mint">sudo apt install firefox</p>
     <button onclick="copyToClipboard('mint')">Copy to clipboard</button>
   </div>
 
   <div class="distro">
     <h2>Kali Linux</h2>
-    <p id="kali">sudo apt install firefox-esr</p>
+    <p class="codeblock" id="kali">sudo apt install firefox-esr</p>
     <button onclick="copyToClipboard('kali')">Copy to clipboard</button>
   </div>
 </div>
