--- a/apps/firefox.html
+++ b/apps/firefox.html
@@ -8,13 +8,9 @@
   <script src="js/script.js"></script>
 </head>
 <body>
+  <h1 id="title"></h1>
   
-  <h1>Install Firefox</h1>
-  
-<div id="box" class="box">
-
-</div>
-
+  <div id="box" class="box"></div>
 
 </body>
 </html>
