--- a/apps/firefox.html
+++ b/apps/firefox.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1 id="title"></h1>
-  
+  <p>Copy the command to install the app for your Linux distribution</p>
   <div id="box" class="box"></div>
 
 </body>
