--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>EzInstall</h1>
   <p>Install any linux app easily.</p>
   <input type="search" id="search" placeholder="Search for software">
-  <p>Just search and click</p>
+  <p>one-time commands to install or automatically from script</p>
   <div id="results">
   </div>
   
